# build-test

./: .gitignore  CMakeLists.txt  build-test.qbs
app/: Application.cpp  Application.h  CMakeLists.txt  app.qbs  main.cpp
libs/: CMakeLists.txt  libs.qbs
libs/libfoo/: AbstractApplication.cpp  AbstractApplication.h  CMakeLists.txt  libfoo.qbs
